--- a/style.css
+++ b/style.css
@@ -49,8 +49,13 @@ body{
 
 .contact-item{
     list-style: none !important;
-
 }
+
+#myBtn {
+    background-color: white;
+    padding: unset;
+}
+
 .main-menu li {
     margin-left: 20px;
     font-family: monospace;
@@ -128,6 +133,7 @@ body{
     .menu-toggle {
         display: block;
         PADDING: UNSET;
+        margin-left: 90px;
     }
 
 
